[tool.poetry]
name = "my-language"
version = "0.1.0"
description = ""
authors = ["ibipul <islam.bipul@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = "^0.3.0"} 
pydantic = "^2.0" 

# Check the path of your local package reference
my-assistant = {path = "/Users/bislam/lang_chain_learn/my-language/packages/my-assistant", develop = true}


[tool.poetry.group.dev.dependencies]
# FIX THE BROKEN CLI
langchain-cli = ">=0.0.37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
